--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
     </div>
     <!-- main主体模块结束 -->
-    <!-- 推荐模块start -->
+    <!-- 推荐模块开始 -->
     <div class="w recom">
         <div class="recom_hd">
             <h1><img src="images/recom_hd.png" alt=""></h1>
